--- a/index.html
+++ b/index.html
@@ -11,57 +11,74 @@
             padding: 0;
             height: 100%;
             font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif;
-            background-color: #f4f4f7; /* 浅灰色背景，护眼 */
+            background-color: #f0f2f5; /* 背景色稍微深一点，突出中间的白框 */
+            display: flex;
+            flex-direction: column;
         }
 
-        /* 顶部导航栏样式 */
+        /* 顶部导航栏 */
         header {
-            background-color: #1a1a1a; /* 深色背景体现专业感 */
+            background-color: #1a1a1a;
             color: #ffffff;
             padding: 15px 20px;
             display: flex;
             justify-content: space-between;
             align-items: center;
             box-shadow: 0 2px 5px rgba(0,0,0,0.1);
+            flex-shrink: 0; /* 防止头部被压缩 */
         }
 
         header h1 {
             margin: 0;
-            font-size: 1.2rem;
+            font-size: 1.1rem;
             font-weight: 500;
             letter-spacing: 1px;
         }
 
         header .status {
-            font-size: 0.8rem;
-            color: #4caf50; /* 绿色表示在线 */
+            font-size: 0.75rem;
+            color: #4caf50;
             border: 1px solid #4caf50;
             padding: 2px 8px;
             border-radius: 12px;
         }
 
-        /* 聊天窗口容器 */
+        /* 主要内容区域 - 用于垂直居中聊天框 */
+        .main-content {
+            flex: 1;
+            display: flex;
+            justify-content: center;
+            align-items: center; /* 垂直居中 */
+            padding: 20px;
+        }
+
+        /* 聊天窗口容器 - 调整为更小的尺寸 */
         .chat-container {
-            max-width: 1200px; /* 限制最大宽度，大屏不至于太宽 */
-            margin: 20px auto; /* 上下留白，水平居中 */
+            width: 100%;
+            max-width: 450px; /* 限制最大宽度，像手机APP一样 */
+            height: 80vh; /* 高度占屏幕的80% */
+            max-height: 800px; /* 最大高度限制 */
+            min-height: 600px; /* 最小高度保证 */
             background-color: #fff;
-            box-shadow: 0 4px 15px rgba(0,0,0,0.05); /* 轻微阴影 */
-            border-radius: 8px;
-            overflow: hidden; /* 防止iframe溢出圆角 */
-            height: calc(100vh - 100px); /* 动态计算高度：屏幕高度减去头部和边距 */
-            min-height: 700px; /* 保持您要求的最小高度 */
+            box-shadow: 0 8px 30px rgba(0,0,0,0.12); /* 更明显的阴影，增加立体感 */
+            border-radius: 16px; /* 更圆润的边角 */
+            overflow: hidden;
+            border: 1px solid #e1e1e1; /* 细微的边框 */
         }
 
         /* 针对移动端的适配 */
         @media (max-width: 768px) {
-            .chat-container {
-                margin: 0;
-                border-radius: 0;
-                height: calc(100vh - 60px);
-                min-height: auto; /* 移动端取消最小高度限制，适应屏幕 */
+            .main-content {
+                padding: 0;
+                align-items: stretch; /* 移动端填满高度 */
             }
-            body {
-                background-color: #fff;
+            .chat-container {
+                max-width: 100%;
+                height: 100%;
+                max-height: none;
+                border-radius: 0;
+                box-shadow: none;
+                border: none;
             }
         }
     </style>
@@ -73,13 +90,15 @@
         <span class="status">System Online</span>
     </header>
 
-    <div class="chat-container">
-        <iframe
-            src="https://udify.app/chatbot/xx7bN1iSHhpxgZqp"
-            style="width: 100%; height: 100%;"
-            frameborder="0"
-            allow="microphone">
-        </iframe>
+    <div class="main-content">
+        <div class="chat-container">
+            <iframe
+                src="https://udify.app/chatbot/xx7bN1iSHhpxgZqp"
+                style="width: 100%; height: 100%;"
+                frameborder="0"
+                allow="microphone">
+            </iframe>
+        </div>
     </div>
 
 </body>
